Moved to Newton, added figs to manuscript
Added new default param values to ./coarse_ng based on what has worked
in the cpi routine. still quite unstable. no longer allow cpi to
continue if a projection failed.

--- a/report/manuscript-refs.bib
+++ b/report/manuscript-refs.bib
@@ -111,7 +111,7 @@
 }
 
 @article{swaminathan_modeling_1998,
-	title = {Modeling {Supply} {Chain} {Dynamics}: {A} {Multiagent} {Approach}*},
+	title = {Modeling {Supply} {Chain} {Dynamics}: {A} {Multiagent} {Approach}},
 	volume = {29},
 	issn = {1540-5915},
 	shorttitle = {Modeling {Supply} {Chain} {Dynamics}},
