--- a/report/multigraph_manuscript.tex
+++ b/report/multigraph_manuscript.tex
@@ -73,36 +73,51 @@ Evolving the system in this manner, the degree sequence approaches a stationary 
 \begin{figure}[ht!]
   \centering
   \includegraphics[width=0.9\textwidth]{graph-evo}
-  \caption{Illustration of the steps enumerated above that evolve the graph from $t$ to $t+1$ \label{fig:step-illustration}}
+  \caption{Schematic of the substeps of the evolution dynamics of the
+    multigraph $G(t)$. \label{fig:step-illustration}}
 \end{figure}
 
-\begin{figure}[h!]
+\begin{figure}[th!]
   \vspace{-5mm}
   \centering
-  \begin{subfigure}{0.75\textwidth}
+  \begin{subfigure}[t]{0.49\textwidth}
     \centering
-    \includegraphics[height=3in]{erdos-init}
-    \subcaption{Initial graph is an Erd\H{o}s-R\'{e}nyi random graph. \label{fig:erdos-init}}
-  \end{subfigure} \\ %
-  \begin{subfigure}{0.75\textwidth}
+    \includegraphics[width=\textwidth]{lopsided-degs-a}
+    \subcaption{\label{fig:lopsided-init}}
+  \end{subfigure} %
+  \begin{subfigure}[t]{0.49\textwidth}
     \centering
-    \includegraphics[height=3in]{lopsided-init}
-    \subcaption{Initial graph is half completely connected, half isolted vertices. \label{fig:lopsided-init}}
-  \end{subfigure}%
-  \caption{Figure showing evolution of degree sequence over time. Despite starting from different initial configurations, both systems evolve to the same steady state. \label{fig:dse}}
+    \includegraphics[width=\textwidth]{erdos-degs-a}
+    \subcaption{\label{fig:erdos-init}}
+  \end{subfigure}
+  \caption{Multigraph evolution dynamics for an $n=100$ vertex graph
+    observed through the degree distribution. Two distinct transients
+    are shown, initialized with (a) an Erd\H{o}s-R\'{e}nyi random
+    graph with $m = 5,050$ edges and (b) a graph in which half the
+    vertices are isolated, and half completely connected among
+    themselves. \label{fig:dse}}
 \end{figure}
 
-
-\begin{figure}[ht!]
-  % TODO
+\begin{figure}[th!]
+  \vspace{-5mm}
   \centering
-  \includegraphics[width=0.8\textwidth]{triangle-slaving}
-  \caption{Figure showing evolution of triangle counts over time,
-    starting from three different initial networks that shared the
-    same degree sequence. Thus higher-order variables that may be
-    initialized off the slow manifold are quickly drawn to it
-    ($O(n^2)$ steps). \label{fig:sv}}
+  \begin{subfigure}[t]{0.49\textwidth}
+    \centering
+    \includegraphics[width=\textwidth]{triangle-slaving}
+    \subcaption{\label{fig:sv-n2}}
+  \end{subfigure} %
+  \begin{subfigure}[t]{0.49\textwidth}
+    \centering
+    \includegraphics[width=\textwidth]{triangle-slaving-n3}
+    \subcaption{\label{fig:sv-n3}}
+  \end{subfigure}
+  \caption{Evolution of higher-order statistics (here, the total
+    triangle count) for three different network initializations. They
+    are quickly ($O(n^2)$ steps) drawn to a slow manifold on which
+    they slowly evolve ($O(n^3)$ steps) to a steady
+    state. \label{fig:sv}}
 \end{figure}
+
 
 \section{Equation-free modeling}
 \label{sec:ef}
@@ -119,8 +134,17 @@ restriction and lifting operators.
 
 \begin{figure}[ht!]
   \centering
-  \includegraphics[width=1.1\textwidth]{cpi-diagram}
-  \caption{A diagram of the CPI procedure developed for this system. \label{fig:cpi-diagram}}
+  \includegraphics[width=\textwidth]{cpi-diagram}
+  \caption{Schematic of our restriction ($R$) and lifting ($L$)
+    procedures. The graph's sorted degree sequence is calculated
+    ($R_1$) and then fit to a third-order polynomial ($R_2$). This
+    maps graphs ($G$) to vectors of four coefficients
+    ($\mathbf{c}$). To lift, the polynomial is used to generate a
+    degree sequence ($L_1$), which is then used to construct a
+    consistent graph ($L_2$). This process maps vectors of
+    four coefficients ($\mathbf{c}$) to graphs
+    ($G$). $R = R_2 \circ R_1 $ is our restriction and $L = L_2 \circ
+    L_1$ is our lifting. \label{fig:cpi-diagram}}
 \end{figure}
 
 
@@ -155,17 +179,21 @@ Results of the application of this general framework with the specific lifting a
 \begin{figure}[h!]
   \vspace{-5mm}
   \centering
-  \begin{subfigure}{0.75\textwidth}
+  \begin{subfigure}{0.49\textwidth}
     \centering
-    \includegraphics[height=3in]{cpi-3d-comp}
-    \subcaption{Percent error for each vertex in a CPI-accelerated simulation compared to an ensemble of plain simulations. \label{fig:cpi-error}}
-  \end{subfigure} \\ %
-  \begin{subfigure}{0.75\textwidth}
+    \includegraphics[width=\textwidth]{cpi-3d-comp}
+    \subcaption{\label{fig:cpi-error}}
+  \end{subfigure} %
+  \begin{subfigure}{0.49\textwidth}
     \centering
-    \includegraphics[height=3in]{cpi-error-comp}
-    \subcaption{Percent error when comparing two ensembles of plain runs, showing the discrepancies arising simply from the stochastic nature of the system. \label{fig:self-error}}
+    \includegraphics[width=\textwidth]{cpi-relative-error-n3}
+    \subcaption{\label{fig:self-error}}
   \end{subfigure}%
-  \caption{Figure showing small errors in CPI routine. \label{fig:cpi-results}}
+  \caption{CPI results: (a) the evolution of the CPI-accelerated
+    degree sequence (red) compared to direct simulation (blue) and (b)
+    error in cpi-accelerated runs calculated by comparing
+    cpi-accelerated degree sequences to those arising from an ensemble
+    of direct simulations. \label{fig:cpi-results}}
 \end{figure}
 
 
@@ -191,17 +219,20 @@ This is precisely the approach of the Newton-GMRES method, in which the solution
 \begin{figure}[h!]
   \vspace{-5mm}
   \centering
-  \begin{subfigure}{0.75\textwidth}
+  \begin{subfigure}{0.49\textwidth}
     \centering
-    \includegraphics[height=3in]{newton-error}
-    \subcaption{Evolution of error in the coarse Newton-GMRES scheme. \label{fig:newton-error}}
-  \end{subfigure} \\ %
-  \begin{subfigure}{0.75\textwidth}
+    \includegraphics[width=\textwidth]{newton-error}
+    \subcaption{\label{fig:newton-error}}
+  \end{subfigure} %
+  \begin{subfigure}{0.49\textwidth}
     \centering
-    \includegraphics[height=3in]{newton-comp}
-    \subcaption{Visual comparison of the algorithm's solution to the stationary state arising from direct simulation. \label{fig:newton-comp}}
+    \includegraphics[width=\textwidth]{newton-comp}
+    \subcaption{\label{fig:newton-comp}}
   \end{subfigure}%
-  \caption{Performance of coarse Newton-GMRES routine. \label{fig:newton-results}}
+  \caption{Coarse Newton-GMRES results: (a) evolution of error in the
+    coarse Newton-GMRES scheme and (b) visual comparison of the
+    algorithm's solution to the stationary state arising from direct
+    simulation. \label{fig:newton-results}}
 \end{figure}
 
 
@@ -234,21 +265,19 @@ dimensionality reduction.
 \begin{figure}[h!]
   \vspace{-5mm}
   \centering
-  \begin{subfigure}{0.75\textwidth}
+  \begin{subfigure}{0.49\textwidth}
     \centering
-    \includegraphics[height=3in]{pca-2d-rho}
-    \subcaption{Coloring the two-dimensional PCA embedding with
-      $\rho$. \label{fig:pca-rho}}
-  \end{subfigure} \\ %%
-  \begin{subfigure}{0.75\textwidth}
+    \includegraphics[width=\textwidth]{pca-2d-rho-a}
+    \subcaption{\label{fig:pca-rho}}
+  \end{subfigure} %
+  \begin{subfigure}{0.49\textwidth}
     \centering
-    \includegraphics[height=3in]{pca-2d-kappa}
-    \subcaption{Coloring the two-dimensional PCA embedding with
-      $\kappa$. \label{fig:pca-kappa}}
+    \includegraphics[width=\textwidth]{pca-2d-kappa-a}
+    \subcaption{\label{fig:pca-kappa}}
   \end{subfigure}%
-  \caption{Embedding of steady states in $\rho$ / $\kappa$ plane,
-    showing that PCA can uncover the two-dimensional structure of the
-    dataset. \label{fig:pca}}
+  \caption{PCA of motif-based embeddings: (a) coloring the
+    two-dimensional PCA embedding with $\rho$ and (b) coloring the
+    two-dimensional PCA embedding with $\kappa$. \label{fig:pca}}
 \end{figure}
 
 \subsection{DMAPS}
@@ -261,44 +290,48 @@ We see that both PCA and DMAPS, when combined with a suitable embedding of each 
 \begin{figure}[h!]
   \vspace{-5mm}
   \centering
-  \begin{subfigure}{0.75\textwidth}
+  \begin{subfigure}{0.49\textwidth}
     \centering
-    \includegraphics[width=0.9\textwidth]{dmaps-3d-convergence}
-    \subcaption{Figure showing embedding of two trajectories on
-      different timescales. Initially they are separate, but
-      eventually they're embedded in the same region as they evolve to
-      the same coarse stationary state. Initial and final states are
-      circled, and point size grows as more steps are
-      taken in each trajectory. \label{fig:dmaps-results-regular}}
-  \end{subfigure} \\ %%
-  \begin{subfigure}{0.75\textwidth}
+    \includegraphics[width=\textwidth]{dmaps-3d-convergence}
+    \subcaption{\label{fig:dmaps-results-regular}}
+  \end{subfigure} %
+  \begin{subfigure}{0.49\textwidth}
     \centering
-    \includegraphics[height=3in]{dmaps-3d-convergence-zoom}
-    \subcaption{An enlarged view of the final points in the previous
-      plot, revealing the approach to a similar final
-      state. \label{fig:dmaps-results-zoom}}
+    \includegraphics[width=\textwidth]{dmaps-3d-convergence-zoom}
+    \subcaption{\label{fig:dmaps-results-zoom}}
   \end{subfigure}%
-  \caption{One dimensional embedding of different trajectories with DMAPS. \label{fig:dmaps-results}}
+  \caption{DMAP of motif-based embeddings from two separate simulation
+    trajectories: (a) embedding of two trajectories on different
+    timescales. While the trajectories are initially embedded in
+    separate regions due to their different initial conditions,
+    they're eventually mapped close together as they evolve to the
+    same coarse stationary state. Final states are circled, and point
+    size grows as more steps are taken in each trajectory. (b)
+    Enlarged view of the final points in the previous plot, revealing
+    the approach to a similar final state. Here, the average of the
+    final fifty points is circled. Due to the stochastic nature of
+    the system, the final embeddings randomly fluctuate about the
+    shared stationary state. \label{fig:dmaps-results}}
 \end{figure}
 
 \begin{figure}[h!]
   \vspace{-5mm}
   \centering
-  \begin{subfigure}{0.75\textwidth}
+  \begin{subfigure}{0.49\textwidth}
     \centering
-    \includegraphics[height=3in]{dmaps-2d-rho}
-    \subcaption{Coloring the two-dimensional DMAPS embedding with
-      $\rho$. \label{fig:dmaps-rho}}
-  \end{subfigure} \\ %%
-  \begin{subfigure}{0.75\textwidth}
+    \includegraphics[width=\textwidth]{dmaps-2d-rho-a}
+    \subcaption{\label{fig:dmaps-rho}}
+  \end{subfigure} %
+  \begin{subfigure}{0.49\textwidth}
     \centering
-    \includegraphics[height=3in]{dmaps-2d-kappa}
-    \subcaption{Coloring the two-dimensional DMAPS embedding with
-      $\kappa$. \label{fig:dmaps-kappa}}
+    \includegraphics[width=\textwidth]{dmaps-2d-kappa-a}
+    \subcaption{\label{fig:dmaps-kappa}}
   \end{subfigure}%
-  \caption{Embedding of steady states in $\rho$ / $\kappa$ plane,
-    showing that DMAPS uncovered the variables governing the
-    stationary state, known from
+  \caption{DMAP of motif-based embeddings from collection of different
+    simulations run with different parameter values: (a) coloring the
+    two-dimensional DMAPS embedding with $\rho$ and (b) coloring the
+    two-dimensional DMAPS embedding with $\kappa$. As with PCA, DMAPS
+    uncovered the variables governing the stationary state, known from
     Bal\'{a}zs' paper \label{fig:dmaps-rk}}
 \end{figure}
 
